--- a/OpenXmlPowerToolsExamples/SpreadsheetWriterStyle/SpreadsheetWriterCellStylesExample.csproj
+++ b/OpenXmlPowerToolsExamples/SpreadsheetWriterStyle/SpreadsheetWriterCellStylesExample.csproj
@@ -64,7 +64,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SpreadsheetWriterStyle.cs" />
+    <Compile Include="SpreadsheetWriterCellStylesExample.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
